--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-Flask==2.0.1
+Flask>=3.0.0
 matplotlib==3.4.3
 plotly==5.3.1
-numpy==1.21.2
+numpy==1.21.1
+setuptools==57.5.0
 pandas==1.3.3
 seaborn==0.11.2
-scikit-learn==0.24.2
+Cython==0.29.24
+openpyxl==3.1.2
+Werkzeug==3.0.1
