--- a/flask-app-deployment.yaml
+++ b/flask-app-deployment.yaml
@@ -14,6 +14,13 @@ spec:
     spec:
       containers:
       - name: flask-app-container
-        image: nikhilprao/flaskapp:v2  # Use your Docker image
+        image: nikhilprao/flaskapp:v6  # Use your Docker image
         ports:
-        - containerPort: 8000
+        - containerPort: 8080
+        resources:
+          requests:
+          memory: "64Mi"  # Adjust these values based on your application requirements
+          cpu: "250m"
+          limits:
+            memory: "256Mi"
+            cpu: "500m"
